--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <br />
             <div class="buttons">
               <a type="button" class="btn btn-lg btn-white" href="mailto:cec.mpo@gmail.com">Contact</a>
-              <button type="button" class="btn btn-lg btn-link text-white">Mon parcours</button>
+              <a type="button" class="btn btn-lg btn-link text-white" href="./parcours.html">Mon parcours</a>
             </div>
           </div>
         </div>
@@ -135,8 +135,7 @@
             syndicat.
           </p>
           <div class="github-buttons">
-            <a href="https://github.com/creativetimofficial/soft-ui-design-system" target="_blank" rel="nofollow"
-              class="btn bg-gradient-primary mb-5 mb-sm-0">Lire plus...</a>
+            <a class="btn bg-gradient-primary mb-5 mb-sm-0" href="../parcours.html">Lire plus...</a>
             <div class="github-button">
               <span></span>
             </div>
@@ -176,7 +175,7 @@
                 C’est pour cela qu’elle intègre le Conseil Économique Social et Environnemental en tant qu'Attachée du
                 Groupe FO.</p>
               <div class="github-buttons">
-                <a href="" target="_blank" rel="nofollow" class="btn bg-gradient-primary mb-5 mb-sm-0">Lire plus...</a>
+                <a class="btn bg-gradient-primary mb-5 mb-sm-0" href="./parcours.html">Lire plus...</a>
                 <div class="github-button">
                   <span></span>
                 </div>
@@ -210,8 +209,7 @@
               syndicat.
             </p>
             <div class="github-buttons">
-              <a href="https://github.com/creativetimofficial/soft-ui-design-system" target="_blank" rel="nofollow"
-                class="btn bg-gradient-primary mb-5 mb-sm-0">Lire plus...</a>
+              <a class="btn bg-gradient-primary mb-5 mb-sm-0" href="./parcours.html">Lire plus...</a>
               <div class="github-button">
                 <span></span>
               </div>
